package lld.bookmyshow.domain.enums;

public enum BookingStatus {
    CONFIRMED,
    CANCELLED
}
