package lld.bookmyshow.domain.enums;

public enum SeatStatus {
    AVAILABLE,
    LOCKED,
    BOOKED
}
