package lld.bookmyshow.util;

public interface IdGenerator {
    String newId();
}

